Missing closing Steps tag

--- a/docs/wearables/guides/garmin.mdx
+++ b/docs/wearables/guides/garmin.mdx
@@ -20,6 +20,7 @@ Garmin differs in that receiving a Historical Pull Completion event does not ind
 <Step title="The Incremental Data stage">
 All **historical and new data** are delivered incrementally as [Data Events](/webhooks/introduction#incremental-data-stage) (`daily.data.*.*`).
 </Step>
+</Steps>
 
 <Note>
 This behaviour is exclusive to Garmin, as a downstream effect of Garmin's unique historical data access mechanism for third-party integrations.
