--- a/docs/api-reference/data/timeseries/hypnogram.mdx
+++ b/docs/api-reference/data/timeseries/hypnogram.mdx
@@ -3,6 +3,10 @@ title: "Hypnogram"
 openapi: "GET /v2/timeseries/{user_id}/hypnogram/grouped"
 ---
 
+<Warning>
+The Hypnogram timeseries is deprecated. Use [Sleep Cycle](/api-reference/data/sleep-cycle) instead.
+</Warning>
+
 <Card
   title="View Full Response Schema »"
   icon="diamond-turn-right"
