--- a/docs/changelog/wearables/providers.mdx
+++ b/docs/changelog/wearables/providers.mdx
@@ -21,7 +21,7 @@ AFib Burden<br />`afib_burden`                          | ✅              | -  
 </Info>
 
 
-<Accordion icon="venus" iconType="duotone" title="Details" defaultOpen>
+<Accordion icon="heart" iconType="duotone" title="Details" defaultOpen>
 For more information, check out:
 * the [Get Electrocardiogram](/api-reference/data/electrocardiogram/get-summary) endpoint documentation;
 * the [Get Electrocardiogram Voltage](/api-reference/data/timeseries/electrocardiogram-voltage) endpoint documentation;
@@ -40,7 +40,7 @@ For more information, check out:
 We are introducing a new Sleep Cycle summary type (`sleep_cycle`) which captures the detailed hypnogram of a sleep session.
 The existing hyponogram timeseries type is deprecated in favour of this new summary type.
 
-<Accordion icon="venus" iconType="duotone" title="Details" defaultOpen>
+<Accordion icon="moon" iconType="duotone" title="Details" defaultOpen>
 Check out the [Get Sleep Cycle](/api-reference/data/sleep-cycle/get-summary) endpoint and
 the [Sleep Cycle data events](/event-catalog/daily.data.sleep_cycle.created) in the Event Catalog
 for more information.
