Update Link Error lists

--- a/docs/wearables/connecting-providers/errors.mdx
+++ b/docs/wearables/connecting-providers/errors.mdx
@@ -62,10 +62,11 @@ This list is **non-exhaustive**. Your application logic must gracefully handle a
 | Error Type                   | Description                                    |
 | ---------------------------- | ---------------------------------------------- |
 | `invalid_token`              | The Link Token is invalid or has expired.      |
-| `token_not_validated`        | The OAuth Link process has not been initiated via the [Link OAuth Provider](/api-reference/link/link-oauth-provider) endpoint. |
-| `token_consumed`             | The Link Token has been used to initiate a connection. |
+| `token_expired`              | The Link Token has expired.                    |
+| `token_consumed`             | A successful connection establishment had consumed this Link Token. |
 | `provider_credential_error`  | OAuth: An error occurred during the provider authentication flow. Password & Email: The supplied user credential is invalid. |
 | `provider_api_error`         | The credential is valid, but an error occurred on an API call required by Vital to fully establish the connection. |
 | `unsupported_region`         | The region you specified is not supported. <Info>Freestyle Libre only.</Info> |
 | `duplicate_connection`       | The provider credential has an existing connection to a different user in your team. <Info>Applicable only if you have opted in to the `reject_duplicate_connection` team setting.</Info> |
 | `required_scopes_not_granted`| User did not grant **all** required scopes, so Vital cannot establish the connection. |
+| `incorrect_mfa_code`         | The MFA code entered is incorrect.             |
