--- a/docs/wearables/connecting-providers/launching_link.mdx
+++ b/docs/wearables/connecting-providers/launching_link.mdx
@@ -12,12 +12,7 @@ import LinkSDKProvider from '/snippets/link-sdk-provider.mdx';
 Create a Vital Link Token for a user using the [Create Link Token](/api-reference/link/generate-link-token) endpoint.
 
 <Note>
-
-You may want to launch Vital Link for an individual provider.
-This launches the Vital Link widget straight into the login flow for the specified provider.
-
-To do so, you just pass in the provider name as one of the parameter's to the link create endpoint.
-
+Vital Link Token expires 60 minutes after its creation.
 </Note>
 
 <br />
