Update remarks on invalid_token Link Error

--- a/docs/wearables/connecting-providers/errors.mdx
+++ b/docs/wearables/connecting-providers/errors.mdx
@@ -61,7 +61,7 @@ This list is **non-exhaustive**. Your application logic must gracefully handle a
 
 | Error Type                   | Description                                    |
 | ---------------------------- | ---------------------------------------------- |
-| `invalid_token`              | The Link Token is invalid or has expired.      |
+| `invalid_token`              | The Link Token is invalid or malformed.        |
 | `token_expired`              | The Link Token has expired.                    |
 | `token_consumed`             | A successful connection establishment had consumed this Link Token. |
 | `provider_credential_error`  | OAuth: An error occurred during the provider authentication flow. Password & Email: The supplied user credential is invalid. |
