--- a/docs/wearables/sdks/vital-health.mdx
+++ b/docs/wearables/sdks/vital-health.mdx
@@ -86,7 +86,7 @@ class AppDelegate: NSObject, UIApplicationDelegate {
 }
 ```
 
-```swift Objective-C / React Native
+```objc Objective-C / React Native
 #import "AppDelegate.h"
 #import "VitalHealthKitConfiguration.h"
 
