--- a/docs/wearables/guides/abbott-libreview.mdx
+++ b/docs/wearables/guides/abbott-libreview.mdx
@@ -123,25 +123,70 @@ This allows Vital to start pulling data from their account. This is done through
 
 #### 🇺🇸 Vital US region
 
-| Region    | Country/Region coverage            |
-| --------- | ---------------------------------- | 
-| `us` \*   | United States                      |
-| `ca`      | Canada                             | 
-| `in`      | Singapore, Hong Kong, India, Philippines, South Korea, Taiwan |
+
+| Region Code | Region |
+| ----------- | ------ |
+| `ca`        | Canada |
+| `hk`        | Hong Kong |
+| `in`        | India |
+| `kr`        | South Korea |
+| `ph`        | Philippines |
+| `sg`        | Singapore |
+| `tw`        | Taiwan |
+| `us`*        | United States |
 
 _(\*) Default if region is unspecified._
 
 #### 🇪🇺 Vital EU region
 
-| Region   | Country/Region coverage             |
-| -------- | ----------------------------------- | 
-| `eu` \*  | United Kingdom, Ireland             |
-| `sg`     | Singapore, Hong Kong, India, Philippines, South Korea, Taiwan | 
-| `au`     | Australia                           | 
-| `de`     | Germany                             | 
-| `fr`     | France                              |
-| `nl`     | Netherlands, Wider Europe           |
-| `br`     | Brazil                              |
+| Region Code | Region |
+| ----------- | ------ |
+| `ar`        | Argentina |
+| `at`        | Austria |
+| `au`        | Australia |
+| `be`        | Belgium |
+| `bh`        | Bahrain |
+| `br`        | Brazil |
+| `ch`        | Switzerland |
+| `cl`        | Chile |
+| `co`        | Colombia |
+| `cz`        | Czechia |
+| `de`        | Germany |
+| `dk`        | Denmark |
+| `eg`        | Egypt |
+| `es`        | Spain |
+| `fi`        | Finland |
+| `fr`        | France |
+| `gb`*       | United Kingdom |
+| `gr`        | Greece |
+| `hk`        | Hong Kong |
+| `hr`        | Croatia |
+| `ie`        | Ireland |
+| `il`        | Israel |
+| `in`        | India |
+| `it`        | Italy |
+| `jo`        | Jordan |
+| `kr`        | South Korea |
+| `kw`        | Kuwait |
+| `lb`        | Lebanon |
+| `lu`        | Luxembourg |
+| `mx`        | Mexico |
+| `nl`        | Netherlands |
+| `no`        | Norway |
+| `nz`        | New Zealand |
+| `om`        | Oman |
+| `ph`        | Philippines |
+| `pl`        | Poland |
+| `pt`        | Portugal |
+| `qa`        | Qatar |
+| `sa`        | Saudi Arabia |
+| `se`        | Sweden |
+| `sg`        | Singapore |
+| `si`        | Slovenia |
+| `sk`        | Slovakia |
+| `tr`        | Türkiye |
+| `tw`        | Taiwan |
+| `za`        | South Africa |
 
 _(\*) Default if region is unspecified._
 
@@ -208,7 +253,7 @@ token_response = client.link.token(user_id="<user_id>")
 
 ```javascript Node
 const request: LinkTokenExchange = {
-    userId: "<user_id>",
+    userId: "<user_id>
 }
 const data = await client.link.token(request)
 ```
@@ -224,14 +269,14 @@ var tokenResponse = vital.link().token(request);
 
 ```go Go
 request := &vital.LinkTokenExchange{
-     UserId:   "<user_id>",
+     UserId:   "<user_id>
 }
 
 tokenResponse, err := client.Link.Token(context.TODO(), request)
 if err != nil {
   return err
 }
-fmt.Printf("Received data %s\n", response)
+fmt.Printf("Received data %s\n response)
 ```
 
 </CodeGroup>
@@ -244,8 +289,8 @@ fmt.Printf("Received data %s\n", response)
 
 ```python Python
 linkResponse = client.link.connect_email_auth_provider(
-  provider="freestyle_libre",
-  email="<email>",
+  provider="freestyle_libre
+  email="<email>
   vital_link_token=token_response.link_token
 )
 ```
@@ -257,7 +302,7 @@ const linkRequest: EmailProviderAuthLink = {
 }
 
 const connectEmailResponse = await client.link.connectEmailAuthProvider(
-    "freestyle_libre",
+    "freestyle_libre
     linkRequest
 )
 ```
@@ -269,20 +314,20 @@ EmailProviderAuthLink request = EmailProviderAuthLink
         .email("<email>")
         .build();
 
-var data = vital.link().connectEmailAuthProvider("<provider", request);
+var data = vital.link().connectEmailAuthProvider("<provider request);
 ```
 
 ```go Go
 emailAuthRequest := &vital.EmailProviderAuthLink{
   VitalLinkToken: tokenResponse.LinkToken,
-  Email:          "<email>",
+  Email:          "<email>
 }
 
-emailAuth, err := client.Link.ConnectEmailAuthProvider(context.TODO(), "freestyle_libre", emailAuthRequest)
+emailAuth, err := client.Link.ConnectEmailAuthProvider(context.TODO(), "freestyle_libre emailAuthRequest)
 if err != nil {
   return err
 }
-fmt.Printf("Received data %s\n", emailAuth)
+fmt.Printf("Received data %s\n emailAuth)
 ```
 
 </CodeGroup>
