--- a/docs/lab/at-home-phlebotomy/communications.mdx
+++ b/docs/lab/at-home-phlebotomy/communications.mdx
@@ -21,7 +21,9 @@ A table of the **Order Status** and **default SMS** is provided bellow:
 
 | Order Status | Default Message |
 | --- | --- |
-| `requisition_created` | _"Hey **patient_first_name**, it's time to book your at-home phlebotomy draw. Please book a slot using the link provided in the e-mail you just received."_ |
+| `requisition_created` | _"Hey **patient_first_name**, it's time to book your at-home phlebotomy draw. You can book a slot using the following link **booking_link**."_ |
+| `appointment_scheduled` | _"Your appointment with the phlebotomist has been booked at **date**! You can reschedule or cancel using the following link **booking_link**."_ |
+| `appointment_cancelled` | _"Hey, your at-home-phlebotomy appointment at **date** for the **team_name** has been cancelled. You can rebook using the following link **booking_link**."_ |
 | `draw_completed` | _"Your at-home phlebotomy draw is complete! We're delivering your sample to the lab for processing."_ |
 | `completed` | _"The lab has finished processing your blood sample, your results should be ready soon :)"_ |
 | `cancelled` | _"Hey, your order for the **team_name** at-home-phlebotomy appointment has been cancelled. If this is by accident please contact support."_ |
@@ -37,20 +39,7 @@ For emails, the following table describes what information each email contains f
 | `appointment_scheduled` | An email confirming the appointment date and time will be sent to the patient, with the possibility of rescheduling or cancelling the appointment. |
 | `appointment_cancelled` | An email confirming the cancellation of the appointment is sent, providing the possibility of scheduling a new appointment. |
 
-<Info>Emails can be customised and sent from your own domain.</Info>
-
-## SMS Only Communications
-
-The following table describe what are the **Order Status** and **default SMS** sent in this case:
-
-| Order Status | Default Message |
-| --- | --- |
-| `requisition_created` | _"Hey **patient_first_name**, it's time to book your at-home phlebotomy draw. You can book a slot using the following link **booking_link**."_ |
-| `appointment_scheduled` | _"Your appointment with the phlebotomist has been booked at **date**! You can reschedule or cancel using the following link **booking_link**."_ |
-| `appointment_cancelled` | _"Hey, your at-home-phlebotomy appointment at **date** for the **team_name** has been cancelled. You can rebook using the following link **booking_link**."_ |
-| `draw_completed` | _"Your at-home phlebotomy draw is complete! We're delivering your sample to the lab for processing."_ |
-| `completed` | _"The lab has finished processing your blood sample, your results should be ready soon :)"_ |
-| `cancelled` | _"Hey, your order for the **team_name** at-home-phlebotomy appointment has been cancelled. If this is by accident please contact support."_ |
+<Info>Emails can be white labelled and sent from your own domain.</Info>
 
 
 ## Disable Communications
