update Whoop for Vital hosted only on Scale plan

--- a/docs/wearables/guides/whoop.mdx
+++ b/docs/wearables/guides/whoop.mdx
@@ -3,24 +3,32 @@ title: "Whoop"
 ---
 
 <Info>
-Whoop [Bring Your Own OAuth](/wearables/connecting-providers/bring_your_own_oauth) is available for [the Launch, Grow and Scale plans](https://tryvital.io/pricing).
+Whoop [Bring Your Own OAuth](/wearables/connecting-providers/bring_your_own_oauth) is available for [the Launch, Grow and Scale plans](https://tryvital.io/pricing), while Vital hosted Whoop app  is only available for the Scale plan.
 </Info>
 
 ## Connecting Whoop to Vital
 
 Whoop is a [BYOO](/wearables/connecting-providers/bring_your_own_oauth) only provider, so you will need your own app in [Whoop's developer dashboard](https://developer-dashboard.whoop.com/).
 
-To set this up you will need to provide us with the following information:
+Then, you can configure the Whoop integration in the Vital dashboard by navigating to the Config > Custom Credentials page and clicking "Setup" next to Whoop V2.
+![Whoop V2 config](/img/whoop_config.png)
 
-1. Name of the Company:
+### Vital Hosted Whoop Apps ([Scale Plan](https://tryvital.io/pricing))
+If you are on the Scale plan, Vital can host your Whoop app. To set this up you will need to provide us with the following information:
+
+1. Name of contact:
+    * Provide the name of the person who will be the main point of contact for the integration.
+2. Name of the Company:
     * Provide the official name of your company.
-2. Desired Name for Sandbox and Prod Applications:
+3. Desired Name for Sandbox and Prod Applications:
     * Specify names for your sandbox and production applications.
-3. Projected Number of Users:
+4. Projected Number of Users:
     * Estimate the number of users utilizing the WHOOP API.
-4. Intended Use of the WHOOP API:
+5. Expected number of API calls per minute / per day.
+    * Estimate the number of API calls per minute and per day.
+6. Intended Use of the WHOOP API:
     * Briefly outline the use case for your product (e.g. who are your users, what benefits will they derive from the integration, etc )
-5. Preferred Timeline for Integration Release:
+7. Preferred Timeline for Integration Release:
     * Indicate your preferred timeline for releasing the integration to your users.
 
-You can share this information via Slack or by emailing Support@tryvital.io.
+You can share this information via Slack or by emailing [support@tryvital.io](mailto:support@tryvital.io).
